# combined-autonomous-coding

./: .flake8  .gitignore  .trivyignore  CHANGELOG.md  Dockerfile  Dockerfile.mock  Makefile  README.md  all_tests_output.txt  all_tests_output_2.txt  app_spec.txt  dashboard_state.json  docker-compose.monitoring.yml  docker-compose.yml  feature_list.json  final_metrics.txt  jira_integration_output.txt  main.py  mock_agent.py  pyproject.toml  qa_summary.txt  questions_answered.txt  requirements-dev.txt  requirements.txt  run_tests.sh  safe_run.sh  sprint_plan.json  successes.txt  temp_files.txt  test_output.txt  test_output_2.txt
.github/workflows/: ci.yml  fix_ci_failure.yml  hourly_agent.yml  mergy.yml  release.yml
agents/: cli.py  config_manager.py  pre_flight.py  runner.py  session_manager.py
agents/cleaner/: __init__.py  agent.py
agents/cursor/: __init__.py  agent.py  client.py  prompts.py
agents/gemini/: __init__.py  agent.py  client.py  prompts.py  sprint.py
agents/local/: __init__.py  agent.py  client.py
agents/openrouter/: agent.py  client.py
agents/shared/: base_agent.py  base_client.py  prompts.py  sprint.py  worktree_manager.py
helm/: plan.md
helm/jira-agent/: Chart.yaml  values.yaml
images/: manifest.json
images/cpp/: Dockerfile
images/csharp/: Dockerfile
images/dart/: Dockerfile
images/elixir/: Dockerfile
images/go/: Dockerfile
images/haskell/: Dockerfile
images/java/: Dockerfile
images/kotlin/: Dockerfile
images/node/: Dockerfile
images/php/: Dockerfile
images/python/: Dockerfile
images/ruby/: Dockerfile
images/rust/: Dockerfile
images/scala/: Dockerfile
images/swift/: Dockerfile
monitoring/: prometheus.yml
shared/: .gitignore_global  agent_client.py  config.py  config_loader.py  database.py  git.py  git_wrapper.py  github_client.py  jira_client.py  log_handler.py  logger.py  models.py  notifications.py  pre-push  state.py  telemetry.py  utils.py  workflow.py
shared/prompts/: cleaner_prompt.md  coding_prompt.md  initializer_prompt.md  jira_initializer_prompt.md  jira_manager_prompt.md  jira_worker_prompt.md  manager_prompt.md  qa_agent_prompt.md  (+4 more)
tests/: CustomDockerfile  reproduce_cli.py  test_agent_jira_flow.py  test_agent_parity.py  test_base_agent.py  test_base_agent_persistence.py  test_cleaner_agent.py  test_cli_agent_launcher.py  test_cli_env.py  test_cli_launcher.py  test_cli_mgmt.py  test_config_loader.py  test_config_manager.py  test_config_validation.py  test_configure.py  test_cursor_agent.py  test_cursor_client.py  test_dashboard_integrity.py  test_database.py  test_gemini_agent.py  test_gemini_client.py  test_git_auth.py  test_git_safety.py  test_git_wrapper.py  test_github_client.py  test_image_selection.sh  test_iteration_metrics.py  test_jira_integration.py  test_jira_integration_cli.py  test_jira_mode_integration.py  test_log_handler.py  test_main.py  test_metrics.py  test_metrics_integration.py  test_notifications.py  test_openrouter_integration.py  test_pre_flight.py  test_profiles.py  test_prompt_loading.py  test_session_manager.py  (+19 more)
ui/: package-lock.json  package.json  server.js  server.py  server.test.js  tui.py
(+33 files in other folders)
