[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "shared*"]

[project]
name = "combined-autonomous-coding"
version = "0.7.0"
description = "Combined Autonomous Coding Agent"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "typer",
    "SQLAlchemy",
    "rich",
    "docker",
    "requests",
    "PyYAML",
    "python-dotenv",
    "tenacity",
    "openai",
    "google-cloud-aiplatform",
    "gitpython",
    "prometheus-client",
    "psutil",
    "platformdirs",
]
requires-python = ">=3.11"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]

[tool.flake8]
max-line-length = 160
extend-ignore = ["E501"]
exclude = [".git", "__pycache__", "docs/source/conf.py", "old", "build", "dist", ".venv", "venv"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
major_on_zero = false
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_parser = "angular"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true